Resolve promo__title misalignment at 1200px breakpoint (issue fixed)

--- a/src/sass/base/basic.scss
+++ b/src/sass/base/basic.scss
@@ -56,6 +56,6 @@ body {
 
 @media screen and (min-width: 1200px) {
 	.container {
-		max-width: 720px;
+		max-width: 1140px;
 	}
 }
